// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render component 1`] = `
<div
  id="Foo-container"
>
  <header>
    <Styled(Heading)
      deprecated={false}
      id="foo"
      slotName="componentToolbar"
      slotProps={
        Object {
          "classes": Object {},
          "description": "Bar",
          "examples": Array [
            <Playground
              code="<button>OK</button>"
              evalInContext={[Function]}
              index={0}
              name="Component"
        />,
            <Styled(Markdown)
              text="Hello *world*!"
        />,
          ],
          "metadata": Object {},
          "name": "Foo",
          "pathLine": "foo/bar.js",
          "slug": "foo",
          "tags": Object {},
        }
      }
    >
      Foo
    </Styled(Heading)>
    <div>
      foo/bar.js
    </div>
  </header>
  <div>
    <Styled(Markdown)
      text="Bar"
    />
    <JsDoc />
  </div>
  <Playground
    code="<button>OK</button>"
    evalInContext={[Function]}
    index={0}
    name="Component"
  />
  <Styled(Markdown)
    text="Hello *world*!"
  />
</div>
`;

exports[`renderer should render name with strike-through style when @deprecated is present in tags 1`] = `
<Styled(ReactComponent)
  description="Bar"
  examples={
    <Component
      name="Foo"
    />
  }
  isolated={false}
  metadata={Object {}}
  methods={false}
  name="Foo"
  pathLine="foo/bar.js"
  slug="foo"
  tags={
    Object {
      "deprecated": Array [
        Object {
          "description": "I am deprecated",
          "title": "deprecated",
        },
      ],
    }
  }
/>
`;

exports[`should not render props / methods section if there is no content 1`] = `
<div
  id="Test-container"
>
  <header>
    <Styled(Heading)
      deprecated={false}
      id="test"
      slotName="componentToolbar"
      slotProps={
        Object {
          "classes": Object {},
          "metadata": Object {},
          "name": "Test",
          "pathLine": "test",
          "slug": "test",
          "tags": Object {},
        }
      }
    >
      Test
    </Styled(Heading)>
    <div>
      test
    </div>
  </header>
  <div>
    <JsDoc />
  </div>
</div>
`;

exports[`should render both props and methods section 1`] = `
<div
  id="Test-container"
>
  <header>
    <Styled(Heading)
      deprecated={false}
      id="test"
      slotName="componentToolbar"
      slotProps={
        Object {
          "classes": Object {},
          "metadata": Object {},
          "methods": <div>
            method
        </div>,
          "name": "Test",
          "pathLine": "test",
          "props": <div>
            prop
        </div>,
          "slug": "test",
          "tags": Object {},
        }
      }
    >
      Test
    </Styled(Heading)>
    <div>
      test
    </div>
  </header>
  <div>
    <JsDoc />
  </div>
  <div>
    <h3>
      Props
    </h3>
    <div>
      prop
    </div>
  </div>
  <div>
    <h3>
      Methods
    </h3>
    <div>
      method
    </div>
  </div>
</div>
`;

exports[`should render component in isolation mode 1`] = `
<div
  id="Test-container"
>
  <header>
    <Styled(Heading)
      deprecated={false}
      id="Test"
      slotName="componentToolbar"
      slotProps={
        Object {
          "classes": Object {},
          "isolated": true,
          "metadata": Object {},
          "name": "Test",
          "pathLine": "test",
          "slug": "Test",
          "tags": Object {},
        }
      }
    >
      Test
    </Styled(Heading)>
    <div>
      test
    </div>
  </header>
  <div>
    <JsDoc />
  </div>
</div>
`;

exports[`should render component not in the isolation mode by default 1`] = `
<div
  id="Test-container"
>
  <header>
    <Styled(Heading)
      deprecated={false}
      id="test"
      slotName="componentToolbar"
      slotProps={
        Object {
          "classes": Object {},
          "metadata": Object {},
          "name": "Test",
          "pathLine": "test",
          "slug": "test",
          "tags": Object {},
        }
      }
    >
      Test
    </Styled(Heading)>
    <div>
      test
    </div>
  </header>
  <div>
    <JsDoc />
  </div>
</div>
`;

exports[`should render component renderer for component with examples 1`] = `
<Styled(ReactComponent)
  description="Bar"
  examples={
    <Examples
      examples={
        Array [
          Object {
            "content": "<button>OK</button>",
            "evalInContext": [Function],
            "type": "code",
          },
          Object {
            "content": "Hello *world*!",
            "type": "markdown",
          },
        ]
      }
      name="Foo"
    />
  }
  isolated={false}
  metadata={Object {}}
  methods={false}
  name="Foo"
  pathLine="foo/bar.js"
  slug="foo"
/>
`;

exports[`should render component renderer for component with methods 1`] = `
<Styled(ReactComponent)
  description="Bar"
  examples={
    <Component
      name="Foo"
    />
  }
  isolated={false}
  metadata={Object {}}
  methods={
    <Styled(Methods)
      methods={
        Array [
          Object {
            "description": "Sets the counter to a particular value.",
            "name": "set",
            "params": Array [
              Object {
                "description": "New value for the counter.",
                "name": "newValue",
                "type": Object {
                  "name": "Number",
                },
              },
            ],
            "returns": null,
          },
        ]
      }
    />
  }
  name="Foo"
  pathLine="foo/bar.js"
  slug="foo"
/>
`;

exports[`should render component renderer for component with props 1`] = `
<Styled(ReactComponent)
  description="Bar"
  examples={
    <Component
      name="Foo"
    />
  }
  isolated={false}
  metadata={Object {}}
  methods={false}
  name="Foo"
  pathLine="foo/bar.js"
  props={
    <Styled(Props)
      props={
        Object {
          "children": Object {
            "description": "Button label.",
            "required": true,
            "type": Object {
              "name": "string",
            },
          },
        }
      }
    />
  }
  slug="foo"
/>
`;

exports[`should render component renderer with example placeholder 1`] = `
<Styled(ReactComponent)
  description="Bar"
  examples={
    <Component
      name="Foo"
    />
  }
  isolated={false}
  metadata={Object {}}
  methods={false}
  name="Foo"
  pathLine="foo/bar.js"
  slug="foo"
/>
`;

exports[`should render methods section 1`] = `
<div
  id="Test-container"
>
  <header>
    <Styled(Heading)
      deprecated={false}
      id="test"
      slotName="componentToolbar"
      slotProps={
        Object {
          "classes": Object {},
          "metadata": Object {},
          "methods": <div>
            test
        </div>,
          "name": "Test",
          "pathLine": "test",
          "props": null,
          "slug": "test",
          "tags": Object {},
        }
      }
    >
      Test
    </Styled(Heading)>
    <div>
      test
    </div>
  </header>
  <div>
    <JsDoc />
  </div>
  <div>
    <h3>
      Methods
    </h3>
    <div>
      test
    </div>
  </div>
</div>
`;

exports[`should render props section 1`] = `
<div
  id="Test-container"
>
  <header>
    <Styled(Heading)
      deprecated={false}
      id="test"
      slotName="componentToolbar"
      slotProps={
        Object {
          "classes": Object {},
          "metadata": Object {},
          "name": "Test",
          "pathLine": "test",
          "props": <div>
            test
        </div>,
          "slug": "test",
          "tags": Object {},
        }
      }
    >
      Test
    </Styled(Heading)>
    <div>
      test
    </div>
  </header>
  <div>
    <JsDoc />
  </div>
  <div>
    <h3>
      Props
    </h3>
    <div>
      test
    </div>
  </div>
</div>
`;
